# GSPulse_public

./: .gitignore  .gitmodules  LICENSE.md  README.md  run_pulse.m  startup_gspulse.m
docs/: CHANGELOG.md  contribute.md
docs/config_help/: _define_init.m  _define_model_offset.m  _define_plasma_params.m  _define_settings.m  _define_shapes_.m  _define_targets.m  _define_tok.m  _define_weights.m
scripts/: install.sh
src/dataformatting/: append_structts.m  check_structts_dims.m  check_ts_dims.m  define_data_indices.m  interp1hold.m  multigrid2pt.m  plot_structts.m  split_ts_signals.m  structts2struct.m  structts2vec.m  vec2structts.m
src/equilibrium/: calc_Lz_profile.m  jphi_estimate.m  normalize_profile_shape.m  psizr2b.m
src/fbt_connection/: L2tok.m  fbt_Iy_gspulse.m  fbt_update_psipla.m
src/gspulse/: GSPulse.m  check_default_settings.m  compute_target_psibry.m  define_init_from_prev_stage.m  extract_timedata.m  gs_update_psipla.m  gsp_postprocessing.m  initialize_eqs.m  initialize_pcurrt.m  measure_ys.m  merge_stage_solutions.m  mpc_config.m  mpc_dims_errchck.m  mpc_update_psiapp.m  output_model.m  plasma_coupling.m
src/math/: bicubicHermite.m  interparc.m  intersections.m  sigmoidn.m  vec2mat.m  zoh_discretize.m
src/matlab/: plot_saved_run.m  run_pulse.m  startup_gspulse.m
src/octave/: fields.m  verLessThan.m
src/python/: gspulse_gui.py  pyproject.toml
src/python/gspulse/: __init__.py  intersections.py  lib.py  qp_solve.py  shape_funs.py
src/raptor_connection/: gspulse2LY.m
src/shape/: shape_edit.m  shapefiles2shapes.m
src/shape_gui/: intersections.py  pyproject.toml  shape_callbacks.py  shape_from_rz.py  shape_gui.py  tok_geo_defaults.py
src/tok/: tok_data_struct2tok.m  unwrap_mpp.m
src/visualization/: data_slider_plot.m  plot_efit_region.m  plot_eq.m  plot_soln.m  shape_slider_plot.m  summary_shape_plot.m  visualize_soln.m
tests/: ci_test.m
(+145 files in other folders)
